<resources>
    <string name="app_name">Excercise02</string>
    <string name="x">X</string>
    <string name="y">y</string>
    <string name="z">Z</string>
    <string name="_1_player">1. Player</string>
    <string name="_2_player">2. Player</string>
    <string name="yy">Y</string>
    <string name="reset">reset</string>
    <string name="_1">0</string>
    <string name="y1">Y</string>
    <string name="winner">Winner =</string>
    <string name="player_1">Player 1 : </string>
    <string name="_0">0</string>
    <string name="_00">0</string>
    <string name="player_2">Player 2 : </string>


</resources>
