<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/x"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/x"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/xx"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:text="@string/_0"
            android:textColor="@android:color/black"
            android:textSize="30sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/y"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/y1"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/yy"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:text="@string/_0"
            android:textColor="@android:color/black"
            android:textSize="30sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/z"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/z"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/zz"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:text="@string/_0"
            android:textColor="@android:color/black"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp">

        <LinearLayout
            android:id="@+id/LP1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal"
            android:onClick="click"
            android:focusable="true">

            <TextView
                android:id="@+id/player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_1"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/p1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@+id/player1"
                android:layout_marginRight="@+id/player1"
                android:text="@string/_0"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:clickable="true"
            android:onClick="pclick"
            android:orientation="horizontal"
            android:focusable="true">

            <TextView
                android:id="@+id/player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@+id/player1"
                android:text="@string/player_2"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/p2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@+id/player2"
                android:text="@string/_0"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="150dp"
        android:onClick="reset"
        android:text="@string/reset"
        android:focusable="true" />


</android.widget.LinearLayout>